--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
         <ktor.version>1.1.2</ktor.version>
         <koin.version>2.0.0-beta-1</koin.version>
         <logback.version>1.2.3</logback.version>
+        <appengine.maven.plugin>1.3.2</appengine.maven.plugin>
+
+        <main.class>com.huma.infinispan.MainKt</main.class>
     </properties>
 
     <dependencies>
@@ -103,11 +106,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>com.google.appengine</groupId>-->
-        <!--<artifactId>appengine-api-1.0-sdk</artifactId>-->
-        <!--<version>1.9.59</version>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
@@ -135,11 +133,49 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>com.google.cloud.tools</groupId>-->
-            <!--<artifactId>appengine-maven-plugin</artifactId>-->
-            <!--<version>1.3.2</version>-->
-            <!--</plugin>-->
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>${main.class}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals> <goal>single</goal> </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>${main.class}</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>${appengine.maven.plugin}</version>
+                <configuration/>
+            </plugin>
         </plugins>
     </build>
 
